--- a/Client-Side/src/lib/css/signup.css
+++ b/Client-Side/src/lib/css/signup.css
@@ -7,13 +7,17 @@ body{
     height: 100vh;
     margin: 0;
     overflow: hidden;
+
 }
+
+
+
 
 /* signup container */
 #signup-container{
     display: flex;
-    width: 800px;
-    height: 520px;
+    width: 880px;
+    height: 540px;
     background: white;
     overflow: hidden;
     position: relative;
@@ -27,13 +31,13 @@ body{
 
 .signup-image{
     width: 40%;
-    background: url('src/lib/components/images/login-image.jpg') center/cover no-repeat;
+    background: url('src/lib/components/images/signup-image.jpg') center/cover no-repeat;
 }
 
 
 /* close button section */
 .close-button{
-    top: 15px;
+    top: 20px;
     right: 10px;
     font-size: 15px;
     position: absolute;
@@ -52,7 +56,7 @@ body{
 
 /* join us now header */
 .signup-form h2{
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     font-size: 24px;
     font-weight: bold;
 }
@@ -75,7 +79,7 @@ body{
     justify-content: space-between;
 }
 
-.form-column input{
+input{
     font-size: 14px;
     width: 100%;
     margin-bottom: 10px;
@@ -85,7 +89,7 @@ body{
     background: white;
 }
 
-.form-column input:focus{
+input:focus{
     border-color: red;
     outline: none;
     box-shadow: 0 0 5px rgba(255, 123, 84, 0.5)
@@ -114,29 +118,41 @@ label{
 
 /* profile picture */
 .profile-picture{
-    gap: 10px;
+    /* gap: 10px; */
     display: flex;
     align-items: center;
-    justify-content: flex-start;
-    flex-wrap: nowrap;
-    
+    justify-content:space-between;
+    width: 100%;    
 }
 
-/* .profile-picture-label{
+.profile-picture-label{
     font-weight: bold;
-    margin-bottom: 5px;
-} */
+    flex: 0 0 100px;
+    /* text-align: left; */
+    /* flex-wrap: nowrap; */
+}
 
-
+.profile-picture-image{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    flex-grow: 1;
+}
 
 
 .profile-picture img{
-    width: 40px;
+    width: 60px;
     height: 40px;
     object-fit: cover;
     border-radius: 50%;
-    /* border: 2px solid #ddd; */
+    border: 2px solid #ddd;
     /* margin-top: 5px; */
+}
+
+.profile-picture input[type="file"]{
+    margin-top: 10px;
+    flex-grow: 1;
+    max-width: 250px;
 }
 
 .profile-picture button{
@@ -169,7 +185,7 @@ label{
 #signup-button{
     margin-top: 15px;
     font-size: 14px;
-    width: 107%;
+    width: 105%;
     background: black;
     color: white;
     border: none;
@@ -186,6 +202,8 @@ label{
 .social-login{
     font-size: 12px;
     margin-top: 20px;
+    justify-content: center;
+
 }
 
 .social-icons{
@@ -200,19 +218,27 @@ label{
     cursor: pointer;
 }
 
-/* login redirect */
+/* sign up section */
 .login{
-    font-size: 10px;
-    color: #555;
-    padding-bottom: 10px;
+    font-size: 12px;
+    margin-top: 5px;
+    justify-content: center;
+
 }
 
+
+
 .login a{
-    color: black;
+    color: rgb(0, 0, 0);
     font-weight: bold;
     text-decoration: none;
 }
 
 .login a:hover{
     text-decoration: underline;
-}
+    
+} 
+
+
+
+
