login & signup page - v1.2 (Google Auth Implemented)

--- a/Client-Side/src/lib/css/login.css
+++ b/Client-Side/src/lib/css/login.css
@@ -120,6 +120,11 @@ input{
     justify-content: center;
 }
 
+.social-icons button{
+    background: none;
+    border: none;
+}
+
 .social-icons img{
     width: 30px;
     cursor: pointer;
