--- a/Client-Side/src/lib/css/homepage.css
+++ b/Client-Side/src/lib/css/homepage.css
@@ -38,6 +38,7 @@ body{
     list-style: none;
     display: flex;
     align-items: center;
+    font-weight: normal;
     gap: 2rem;
     margin: 0;
     padding: 0;
@@ -51,7 +52,7 @@ body{
   .nav-buttons a {
     text-decoration: none;
     color: darkolivegreen;
-    font-weight: 500;
+    font-weight: normal;
     padding: 0.5rem 1rem;
     display: inline-block;
     transition: color 0.3s ease;
