--- a/Client-Side/src/lib/css/articledetail.css
+++ b/Client-Side/src/lib/css/articledetail.css
@@ -290,3 +290,138 @@ main {
     background-color: black;
     color: white;
 }
+.comments-section{
+    max-width: 750px;
+    border-radius: 10px;
+    /* box-shadow:  0 4px 8px rgba(0, 0, 0, 0.1); */
+    padding: 20px;
+    /* margin-top: 20px; */
+    margin-left: 15px;
+    /* margin: auto; */
+    /* background: #fcfcfc54; */
+}
+
+.comment-title{
+    display: flex;
+    flex-direction: column;
+    font-size: 20px;
+}
+
+.comment-box{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 15px;
+    gap: 10px;
+}
+
+textarea{
+    /* width: 100%; */
+    padding: 10px;
+    border: 1px solid #9d9d9d;
+    border-radius: 5px;
+}
+
+.comment-box button{
+    padding: 5px 5px;
+    border: none;
+    border-radius: 5px;
+    background-color: darkolivegreen;
+    color: white;
+    cursor: pointer;
+    font-size: 14px; 
+}
+
+.comment-box button:hover{
+    background-color: navy;
+}
+
+button:disabled{
+    background-color: gray;
+    cursor: not-allowed;
+}
+
+button:disabled:hover{
+    background-color: gray;
+}
+
+.comments-list{
+    list-style: none;
+    padding: 0;
+}
+
+.comment{
+    display: flex;
+    align-items: flex-start;
+    padding: 15px;
+    gap: 10px;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    margin-bottom: 15px;
+    background: #f9f9f9;
+}
+
+.comment-content{
+    flex-grow: 1;
+}
+
+.profile-picture{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.reply-profile-picture{
+    width: 40px;
+    height: 40px;
+}
+
+.comment-username{
+    font-weight: bold;
+    color: navy;
+}
+
+.comment-text{
+    margin: 5px 0;
+}
+
+.comment-date{
+    font-size: 12px;
+    margin-right: 10px;
+}
+
+.reply-button, 
+.delete-button{
+    background: none;
+    border: none;
+    font-weight: bold;
+    cursor: pointer;
+    padding: 5px;
+}
+
+.reply-button:hover{
+    color: white;
+    background: darkolivegreen;
+}
+
+.delete-button:hover{
+    background-color: rgb(211, 72, 72);
+
+}
+
+.reply{
+    display: flex;
+    align-items: flex-start;
+    gap: 10px;
+    margin-top: 10px;
+    padding-left: 50px;
+}
+
+.reply-content{
+    flex-grow: 1;
+    padding: 10px;
+    border-radius: 5px;
+    background: #f1f1f1;
+    
+}
+
