individual article page - v1.3

--- a/Client-Side/src/lib/css/articledetail.css
+++ b/Client-Side/src/lib/css/articledetail.css
@@ -374,6 +374,8 @@ button:disabled:hover{
 .reply-profile-picture{
     width: 40px;
     height: 40px;
+    border-radius: 50%;
+    object-fit: cover;
 }
 
 .comment-username{
