--- a/Client-Side/src/lib/css/articledetail.css
+++ b/Client-Side/src/lib/css/articledetail.css
@@ -457,7 +457,7 @@ button:disabled:hover{
 }
 
 .reply-box textarea{
-    width: 73%;
+    width: 70%;
     padding: 8px;
 }
 
@@ -593,4 +593,49 @@ button:disabled:hover{
 .latest-recipe-name:hover,
 .liked-recipe-name:hover{
     background: rgba(0, 0, 0, 0.8);
+}
+
+.newsletter{
+    /* border: 1px solid #152b01; */
+    background: rgb(220, 255, 220);
+    border-radius: 8px;
+    padding: 20px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    margin-top: 30px;
+}
+
+.newsletter h2{
+    margin-top: 5px;
+    color: navy;
+}
+
+.newsletter-login-prompt{
+    font-weight: bold;
+    color: red;
+}
+
+
+.newsletter-description{
+    font-size: 14px;
+    color: grey;
+}
+
+.newsletter input[type="checkbox"]{
+    transform: scale(1.2);
+}
+
+.sucesss-message{
+    margin-top: 10px;
+    color: green;
+    font-weight: bold;
+}
+
+.newsletter-message{
+    font-size: 16px;
+}
+
+.success-message{
+    font-size: 12px;
+    color: red;
 }
