--- a/Client-Side/src/lib/css/homepage.css
+++ b/Client-Side/src/lib/css/homepage.css
@@ -33,6 +33,40 @@ body{
     color: darkolivegreen;
   }
 
+  /* search bar */
+.search-container {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin: 1rem 2rem;
+}
+
+.search-input {
+  width: 250px;
+  padding: 10px;
+  border: 1px solid white;
+  font-size: 1rem;
+}
+
+.search-button {
+  background-color: darkolivegreen;
+  color: white;
+  border: none;
+  padding: 10px;
+  font-size: 1rem;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: background-color 0.3 ease;
+}
+
+.search-button:hover {
+  background-color: navy;
+}
+
+.navbar + .search-container {
+  margin-top: 10px;
+}
+
   /**** nav buttons ****/
   .nav-buttons {
     list-style: none;
