--- a/Client-Side/src/lib/css/homepage.css
+++ b/Client-Side/src/lib/css/homepage.css
@@ -13,7 +13,7 @@ body{
     top: 0;
     z-index: 10;
   }
-  
+  /* logo souful spoon */
   .logo-container {
     display: flex;
     align-items: center;
@@ -37,8 +37,6 @@ body{
 .search-container {
   display: flex;
   justify-content: flex-end;
-  align-items: center;
-  margin: 1rem 2rem;
 }
 
 .search-input {
@@ -132,11 +130,14 @@ body{
     transform: scale(1.1);
   }
    
-  /* main */
+  /* main title */
   main {
     padding: 1rem;
     text-align: center;
   }
+
+
+/* dropdown box for recipes */
 
   .dropdown {
     position: relative;
@@ -189,10 +190,15 @@ body{
     transform: translateY(0);
   } 
 
+  /* filter button styling */
+  .search-filter-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
+  }
   .filter-box {
     position: relative;
-    display: inline-block;
-    margin: 1rem;
   }
 
   .filter-button {
@@ -204,6 +210,7 @@ body{
     cursor: pointer;
     border-radius: 4px;
     transition: background-color 0.3s ease;
+    align-items: center;
   }
 
   .filter-button:hover {
@@ -260,6 +267,8 @@ body{
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease;
   }
+
+  /* images styles and hover and pop text */
 
   .imagetext img {
     width: 100%;
