--- a/Client-Side/src/lib/css/homepage.css
+++ b/Client-Side/src/lib/css/homepage.css
@@ -1,6 +1,9 @@
 /**** Navbar Styling ****/
-body{
+html, body{
     font-family: sans-serif;
+    height: 100;
+    display: flex;
+    flex-direction: column;
 }
 
 .navbar {
@@ -370,4 +373,82 @@ body{
 .dropdown-menu li a:hover {
   background-color: darkolivegreen;
   color: white;
+}
+
+/* footer styling */
+
+.footer {
+  background-color: darkolivegreen;
+  color: white;
+  padding: 1rem 0;
+  text-align: center;
+  bottom: 0;
+  position: relative;
+  width: 100%;
+}
+
+.footer-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  max-width: 1200px;
+  margin: 0 auto;
+  flex-wrap: wrap;
+}
+
+.footer-column {
+  flex: 1;
+  padding: 1rem;
+  min-width: 250px;
+}
+
+.footer-logo {
+  width: 100px;
+  margin-bottom: 1rem;
+  height: auto;
+}
+
+.footer-about {
+  font-size: 0.9rem;
+  line-height: 1.6;
+}
+
+.footer-links {
+  list-style: none;
+  padding: 0;
+}
+
+.footer-links li {
+  margin-bottom: 0.5rem;
+}
+
+.footer-links a {
+  text-decoration: none;
+  color: white;
+  font-size: 1rem;
+  transition: color 0.3s ease;
+}
+
+.footer-links a:hover {
+  color: navy;
+}
+
+/* social icons */
+.social-icons {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+  margin-top: 1rem;
+}
+
+.social-link img {
+  width: 40px;
+  height: 40px;
+  transition: transform 0.3s ease, opacity 0.3s ease;
+  border-radius: 50%;
+}
+
+.social-link img:hover {
+  transform: scale(1.1);
+  opacity: 0.8;
 }
