--- a/Client-Side/src/lib/css/mockarticlepublish.css
+++ b/Client-Side/src/lib/css/mockarticlepublish.css
@@ -282,3 +282,40 @@ input{
 .selected{
     background: navy !important;
 }
+
+.blur-background{
+    pointer-events: none;
+}
+
+.popup{
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5)
+}
+
+.popup-content{
+    background: white;
+    padding: 20px;
+    border-radius: 8px;
+    text-align: center;
+}
+
+.popup-content button{
+    padding: 10px;
+    background: darkolivegreen;
+    color: white;
+    border: none;
+    cursor: pointer;
+    margin-top: 10px;
+    border-radius: 5px;
+}
+
+.popup-content button:hover{
+    background: navy;
+}
