--- a/Client-Side/src/lib/css/homepage.css
+++ b/Client-Side/src/lib/css/homepage.css
@@ -16,6 +16,7 @@ html, body{
     top: 0;
     z-index: 10;
   }
+  
   /* logo souful spoon */
   .logo-container {
     display: flex;
@@ -313,7 +314,17 @@ html, body{
     font-size: 1rem;
     font-weight: bold;
   }
-  
+
+  .imagetext {
+    position: relative;
+    overflow: hidden;
+  }
+
+  .imagetext a {
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
   /* profile dropdown */
 .profile-dropdown {
   position: relative;
