--- a/Client-Side/src/lib/css/mockarticlepublish.css
+++ b/Client-Side/src/lib/css/mockarticlepublish.css
@@ -10,7 +10,9 @@ body{
     background-color: #ffffff;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     top: 0;
-    z-index: 10;
+    /* z-index: 10; */
+    z-index: 1100;
+    position: relative;
 }
 
 .logo-container {
@@ -289,14 +291,18 @@ input{
 
 .popup{
     position: fixed;
-    top: 0;
-    left: 0;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.5)
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 1000;
+    transform: translate(-50%, -50%);
+
 }
 
 .popup-content{
