--- a/Client-Side/src/lib/css/homepage.css
+++ b/Client-Side/src/lib/css/homepage.css
@@ -148,7 +148,7 @@ html, body{
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: navy;
+  background-color: white;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   list-style: none;
   padding: 1rem;
@@ -325,7 +325,6 @@ html, body{
   padding: 0;
   margin: 0;
   border-radius: 5px;
-  width: 120px;
   opacity: 0;
   visibility: hidden;
   transform: translateY(10px);
@@ -358,8 +357,11 @@ html, body{
   color: white;
 }
 
-/* footer styling */
+.profile-dropdown:hover .dropdown-menu {
+  display: block;
+}
 
+/* footer styling */
 .footer {
   background-color: darkolivegreen;
   color: white;
