--- a/Client-Side/src/lib/css/recipes.css
+++ b/Client-Side/src/lib/css/recipes.css
@@ -369,3 +369,64 @@ body{
 #snacks { background: #f5f5dc; }
 #quick-easy { background: #f0f8ff; }
 #airfryer { background: #e6f9f9; }
+
+
+ /* profile dropdown */
+ .profile-dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.profile-icon {
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  cursor: pointer;
+  transition: transform 0.3s ease;
+}
+
+.profile-icon:hover .profile-icon {
+  transform: scale(1.1);
+}
+
+.dropdown-menu {
+  position: absolute;
+  right: 0;
+  top: 60px;
+  background-color: white;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  border-radius: 5px;
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(10px);
+  transition: opacity 0.3s ease, transform 0.3s ease;
+
+}
+
+.profile-dropdown:hover .dropdown-menu, .dropdown-menu:hover {
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(0);
+  pointer-events: auto;
+}
+
+.dropdown-menu li {
+  padding: 10px;
+  text-align: center;
+}
+
+.dropdown-menu li a {
+  text-decoration: none;
+  color: black;
+  display: block;
+  padding: 8px;
+  transition: background-color 0.5s ease;
+}
+
+.dropdown-menu li a:hover {
+  background-color: darkolivegreen;
+  color: white;
+}
