--- a/Client-Side/src/lib/css/homepage.css
+++ b/Client-Side/src/lib/css/homepage.css
@@ -36,38 +36,7 @@ html, body{
     color: darkolivegreen;
   }
 
-  /* search bar */
-.search-container {
-  display: flex;
-  justify-content: flex-end;
-}
-
-.search-input {
-  width: 250px;
-  padding: 10px;
-  border: 1px solid white;
-  font-size: 1rem;
-}
-
-.search-button {
-  background-color: darkolivegreen;
-  color: white;
-  border: none;
-  padding: 10px;
-  font-size: 1rem;
-  cursor: pointer;
-  border-radius: 5px;
-  transition: background-color 0.3 ease;
-}
-
-.search-button:hover {
-  background-color: navy;
-}
-
-.navbar + .search-container {
-  margin-top: 10px;
-}
-
+  
   /**** nav buttons ****/
   .nav-buttons {
     list-style: none;
@@ -138,6 +107,37 @@ html, body{
     padding: 1rem;
     text-align: center;
   }
+/* search bar */
+.search-container {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.search-input {
+  width: 250px;
+  padding: 10px;
+  border: 1px solid white;
+  font-size: 1rem;
+}
+
+.search-button {
+  background-color: darkolivegreen;
+  color: white;
+  border: none;
+  padding: 10px;
+  font-size: 1rem;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: background-color 0.3 ease;
+}
+
+.search-button:hover {
+  background-color: navy;
+}
+
+.navbar + .search-container {
+  margin-top: 10px;
+}
 
 
 /* dropdown box for recipes */
@@ -436,4 +436,18 @@ html, body{
 .social-link img:hover {
   transform: scale(1.1);
   opacity: 0.8;
+}
+
+.clear-button {
+  background-color: darkolivegreen;
+  color: white;
+  border: none;
+  padding: 8px 12px;
+  font-size: 14px;
+  cursor: pointer;
+  margin-top: 10px;
+  border-radius: 5px;
+}
+.clear-button:hover {
+  background-color: darkolivegreen;
 }
