--- a/Client-Side/src/lib/css/mockarticlepublish.css
+++ b/Client-Side/src/lib/css/mockarticlepublish.css
@@ -246,7 +246,7 @@ input{
     border-radius: 5px;
     margin-top: 30px;
     cursor: pointer;
-    transition: background 0.3s ease;
+    transition: background-color 0.3s ease;
 }
 
 .upload-button:hover{
@@ -293,10 +293,10 @@ input{
     position: fixed;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     display: flex;
     justify-content: center;
     align-items: center;
+    transform: translate(-50%, -50%);
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.5);
@@ -325,3 +325,94 @@ input{
 .popup-content button:hover{
     background: navy;
 }
+
+/* footer styling */
+.footer {
+    background-color: darkolivegreen;
+    color: white;
+    padding: 1rem 0;
+    text-align: center;
+    bottom: 0;
+    position: relative;
+    width: 100%;
+  }
+  
+  .footer-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    max-width: 1200px;
+    margin: 0 auto;
+    flex-wrap: wrap;
+  }
+  
+  .footer-column {
+    flex: 1;
+    padding: 1rem;
+    min-width: 250px;
+  }
+  
+  .footer-logo {
+    width: 100px;
+    margin-bottom: 1rem;
+    height: auto;
+  }
+  
+  .footer-about {
+    font-size: 0.9rem;
+    line-height: 1.6;
+  }
+  
+  .footer-links {
+    list-style: none;
+    padding: 0;
+  }
+  
+  .footer-links li {
+    margin-bottom: 0.5rem;
+  }
+  
+  .footer-links a {
+    text-decoration: none;
+    color: white;
+    font-size: 1rem;
+    transition: color 0.3s ease;
+  }
+  
+  .footer-links a:hover {
+    color: navy;
+  }
+  
+  /* social icons */
+  .social-icons {
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+    margin-top: 1rem;
+  }
+  
+  .social-link img {
+    width: 40px;
+    height: 40px;
+    transition: transform 0.3s ease, opacity 0.3s ease;
+    border-radius: 50%;
+  }
+  
+  .social-link img:hover {
+    transform: scale(1.1);
+    opacity: 0.8;
+  }
+  
+  .clear-button {
+    background-color: darkolivegreen;
+    color: white;
+    border: none;
+    padding: 8px 12px;
+    font-size: 14px;
+    cursor: pointer;
+    margin-top: 10px;
+    border-radius: 5px;
+  }
+  .clear-button:hover {
+    background-color: darkolivegreen;
+  }
